--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr 2fr 2fr;
@@ -15,9 +18,33 @@ body > * {
 
 #sidebar {
   grid-area: 1 / 1 / -1 / 2;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 1rem 2rem;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: deepskyblue;
+  color: white;
+  align-items: flex-start;
+}
+
+#dashboard {
+  font-size: 28px;
+  margin-bottom: 40px;
+}
+
+#setting {
+  margin-top: 40px;
+}
+
+#sidebar span {
+  margin-right: 2rem;
+  padding-top: 10px;
+}
+
+#sidebar img {
+  filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(147deg) brightness(111%) contrast(101%);
 }
 
 #header {
